[package]
name = "retry_panic"
version = "0.2.0"
authors = ["Thibaud Genty <thibaud.genty@cosmian.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[lib]
proc-macro = true
